Whitespace issue in css

--- a/css/main.scss
+++ b/css/main.scss
@@ -1692,13 +1692,6 @@ $baseurl: '{{ site.baseurl }}/images';
 	#main {
 		> header {
 			@include padding(8em, 0);
-			/*
-			@include vendor('background-image', ('linear-gradient(top, rgba(0,0,0,0.5), rgba(0,0,0,0.5))', 'url("#{$baseurl}/pic01.jpg")'));
-			background-attachment: fixed;
-			background-position: center center;
-			background-repeat: no-repeat;
-			background-size: cover;
-			*/			
 			text-align: center;
 
 			h2 {
